--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <title>Jogos de Matemática</title>
     <!--JQuery--->
     <script src="jquery-3.6.3.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://safi.me.uk/typewriterjs/js/typewriter.js"></script>
     <!---CSS do inicio-->
     <link rel="stylesheet" href="styleInicio.css" />
     <!---CSS geral-->
     <link rel="stylesheet" href="style.css">
+    <!--Font Iconi-->
+    <script src="https://kit.fontawesome.com/20dee05e38.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <main>
       <div class="container-inicio">
-        <header><h1 class="title-inicio">Jogos de Matemática </h1></header>
+        <header><h1 class="title-inicio"> <i class="fa-solid fa-calculator"></i> Jogos de Matemática</h1></header>
         <div>
           <h2 class="subtitle">
             Escolha qual operação Matemática você quer jogar:<br>
@@ -23,31 +27,42 @@
         </div>
         <div class="linkJogos">
           <div class="button">
-            <a href="./multiplicacao1.html"><button type="button" class="btnInicio">Multiplicação</button></a>
+            <a href="./multiplicacao1.html">
+              <button type="button" class="btnInicio">Multiplicação
+                <i class="fa-solid fa-xmark"></i>
+              </button>
+            </a>
           </div>
           <div class="button">
-            <a href="./adição.html"><button type="button" class="btnInicio">Adição</button></a>
+            <a href="./adição.html">
+              <button type="button" class="btnInicio"> Adição 
+                <i class="fa-solid fa-plus"></i> 
+              </button>
+            </a>
           </div>
           <div class="button">
-            <a href="./subtração.html"><button type="button" class="btnInicio">Subtrair</button></a>
+            <a href="./subtração.html">
+              <button type="button" class="btnInicio">Subtrair
+                <i class="fa-solid fa-minus"></i>
+              </button>
+            </a>
           </div>
           <div class="button">
-            <a href="./divisao.html"><button type="button" class="btnInicio">Dividir</button></a>
+            <a href="./divisao.html">
+              <button type="button" class="btnInicio">Dividir
+                <i class="fa-solid fa-divide"></i>
+              </button>
+            </a>
           </div>
         </div>
        </div>
     <br>
-    <div id="copy" class="copy">
-      &copy;Giovani Teodoro Martins <br>
-    </div>
-    <br>
-    <h1>Links para contato:</h1>
     <section class="contato">
       <div id="copy" class="copy">
         &copy;Giovani Teodoro Martins <br>
       </div>
       <br>
-      <h1>LINKS PARA CONTATO:</h1>
+      <h1 class="copy">CONTATO:</h1>
       <div id="links" class="links">
         <a href="https://github.com/giovanep4mg">github</a><br>
       </div>
